Removing profile photo for a better one

--- a/src/index.html
+++ b/src/index.html
@@ -46,14 +46,15 @@
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
-              <img
+              <!-- <img
                 alt="Profile Image"
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
                 src="assets/profile.jpg"
                 alt="Profile Image"
-              />
+              /> -->
+              Profile Image
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
