--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
     <title>Clayton King | Developer</title>
     <meta name="keywords" content="clay-k0, Clayton King, JavaScript" />
-    <meta name="description" content="Clayton King | Developer" />
+    <meta name="description" content="Clayton King | Web Developer" />
 
     <link
       rel="stylesheet"
