--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <title>Clayton King | Developer</title>
+    <title>Clayton King | Web Developer</title>
     <meta name="keywords" content="clay-k0, Clayton King, JavaScript" />
     <meta name="description" content="Clayton King | Web Developer" />
 
@@ -23,7 +23,6 @@
   <body>
     <div id="top"></div>
 
-    <!-- **** Hero Section **** -->
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
@@ -39,7 +38,6 @@
       </div>
     </section>
 
-    <!-- **** About Section **** -->
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
@@ -82,7 +80,6 @@
       </div>
     </section>
 
-    <!-- **** Projects Section **** -->
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
@@ -290,7 +287,7 @@
         </h3> -->
       <hr />
       <div>
-        <h1 class="notable-mentions-title">OTHER NOTABLE MENTIONS</h1>
+        <h1 class="section-title notable-mentions-title">OTHER NOTABLE MENTIONS</h1>
         <ul class="notable-mentions-list">
           <li>
             <div class="card">
@@ -454,7 +451,6 @@
       </div>
     </section>
 
-    <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
         <h2 class="section-title mb-6">Contact</h2>
@@ -473,7 +469,6 @@
       </div>
     </section>
 
-    <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
       <div class="container">
         <a rel="noreferrer" href="#top" class="back-to-top" title="Back To Top">
