--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Hey there! I'm Clayton, a computer science major who is also learning web development. I'm a semester away from being a junior at Old Dominion University. I'm passionate about learning new technologies and building projects that solve real-world problems. I'm a big fan of React and Next.js, and I'm currently learning Svelte and SvelteKit.
+                Hey there! I'm Clayton, a computer science major who is also learning web development. I'm a semester away from being a junior at Old Dominion University. I'm passionate about learning new technologies and building projects that solve real-world problems. I mainly use React and Next.js, but I'm currently learning Svelte and SvelteKit.
               </p>
 
               <span class="d-flex mt-3 mb-3">
