--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
                   href="https://github.com/clay-k0/Face-Finder"
                 >
                   Source Code
-                  <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                  <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </i>
               </div>
             </div>
@@ -196,7 +196,7 @@
                   href="https://github.com/clay-k0/memento"
                 >
                   Source Code
-                  <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                  <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
@@ -252,7 +252,7 @@
                   href="https://github.com/clay-k0/netflix-clone"
                 >
                   Source Code
-                  <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                  <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
@@ -324,7 +324,7 @@
                   href="https://github.com/clay-k0/RoboFriends-App"
                   >
                   Source Code
-                  <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                  <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a
                 >
               </div>
@@ -364,7 +364,7 @@
                   href="https://github.com/clay-k0/insta-quote"
                   >
                   Source Code
-                  <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                  <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
@@ -403,7 +403,7 @@
                   href="https://github.com/clay-k0/"
                   >
                   Source Code
-                  <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                  <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
@@ -442,7 +442,7 @@
                   href="https://github.com/clay-k0/"
                 >
                 Source Code
-                <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
