temp extended bio

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,9 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 Hey there! I'm Clayton, a computer science major who is also learning web development. I'm a semester away from being a junior at Old Dominion University. I'm passionate about learning new technologies and building projects that solve real-world problems. I mainly use React and Next.js, but I'm currently learning Astro, Svelte, and SvelteKit.
+                <br />
+                <br />
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
               </p>
 
               <span class="d-flex mt-3 mb-3">
