--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
             <img class="react-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
             React/Next.js
           </h3>
+
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
@@ -271,7 +272,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row spacer">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
               <h3 class="project-wrapper__text-title">Project 2</h3>
