Updated project section

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
           <h3 class="project-group-title section-title">
-            <img class="react-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+            <img class="react-icon" src="./assets/icons/react-icon.svg" alt="React Icon" />
             React/Next.js
           </h3>
 
@@ -130,7 +130,7 @@
               <div class="project-wrapper__image load-hidden">
                 <a
                   rel="noreferrer"
-                  href="https://face-finder-frontend.onrender.com/"
+                  href="!#"
                   target="_blank"
                 >
                   <div
@@ -224,8 +224,8 @@
                 </p>
                 <h1 class="pt-3 pb-4">Tech Stack</h1>
                 <div class="flex justify-center items-center pb-3">
-                  <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                    <img class="stack-icon pb-4" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                  <a href="https://react.dev/" target="_blank" rel="noreferrer" title="Svelte">
+                    <img class="stack-icon pb-4" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
                   </a>
                 </div>
               </div>
@@ -282,8 +282,9 @@
                 </p>
                 <h1 class="pt-3 pb-4">Tech Stack</h1>
                 <div class="flex justify-center items-center pb-3">
-                  <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                    <img class="stack-icon pb-4" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                  <a href="https://react.dev/" target="_blank" rel="noreferrer" title="Svelte">
+                    <img class="stack-icon pb-4" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
+                  </a>
                   </a>
                 </div>
               </div>
@@ -338,24 +339,18 @@
         <ul class="notable-mentions-list">
           <li>
             <div class="card">
-              <h1>RoboFriends</h1>
-              <a href="http://clay-k0.github.io/RoboFriends-App/">
+              <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
                 <img
-                  class="card-image"
-                  src="./assets/robo-friends-screenshot.png"
-                  alt="Project Image"
-              /></a>
-              <p>
-                This is a simple React project that dynamically displays a
-                set of robot cards. Users can search for certain robots using
-                their names, email addresses, or usernames. The application
-                retrieves robot data from a
-                <a
-                  class="project-desc-link"
-                  href="https://jsonplaceholder.typicode.com/users"
-                  >jsonplaceholder API.</a
-                >
-              </p>
+                class="card-image"
+                src="./assets/robo-friends-screenshot.png"
+                alt="Project Image"
+                /></a>
+                <h1>RoboFriends</h1>
+              <div class="flex justify-center items-center pb-3 pt-3">
+                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
+                  <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                </a>
+              </div>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
@@ -379,23 +374,19 @@
           </li>
           <li>
             <div class="card">
-              <h1>Instaquote</h1>
-              <a href="https://clay-k0.github.io/insta-quote/">
+              <a href="https://clay-k0.github.io/insta-quote/" target="_blank" rel="noreferrer">
                 <img
-                  class="card-image"
-                  src="./assets/insta-quote-screenshot.png"
-                  alt="Project Image"
+                class="card-image"
+                src="./assets/insta-quote-screenshot.png"
+                alt="Project Image"
                 />
               </a>
-              <p>
-                This is a React-based project that generates quotes with a
-                simple click. Utilizing the
-                <a class="project-desc-link" href="https://type.fit/api/quotes"
-                  >type.fit quote API</a
-                >, the application fetches a collection of quotes from various
-                authors. The project also includes a Twitter sharing feature
-                that allows users to share quotes on their Twitter feed.
-              </p>
+              <h1>Instaquote</h1>
+              <div class="flex justify-center items-center pb-3 pt-3">
+                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
+                  <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                </a>
+              </div>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
@@ -418,17 +409,22 @@
           </li>
           <li>
             <div class="card">
-              <h1>Memento</h1>
-              <a href="">
-                <img
+                <a href="https://memento-d6cac.web.app/" target="_blank" rel="noreferrer">
+                  <img
                   class="card-image"
                   src="./assets/memento-screenshot.png"
                   alt="Project Image"
                 />
               </a>
-              <p>
-                This React-based memory matching game is deployed on Firebase. Players click on two cards to reveal their images. Matching images keep the cards face up, while non-matching cards are flipped back over for another attempt. The app is PWA-ready and features a win tracker badge for users.
-              </p>
+              <h1>Memento</h1>
+              <div class="flex justify-center items-center pb-3">
+                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
+                  <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                </a>
+                <a href="https://firebase.google.com" target="_blank" rel="noreferrer" title="Firebase">
+                  <img class="stack-icon p-2" src="./assets/icons/firebase-icon.svg" alt="Firebase Icon"/>
+                </a>
+              </div>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
@@ -451,30 +447,38 @@
           </li>
           <li>
             <div class="card">
-              <h1>Project 4</h1>
-              <a href="http://clay-k0.github.io/RoboFriends-App/">
+              <a href="https://clay-k0-portfolio.netlify.app/">
                 <img
                   class="card-image"
-                  src="./assets/insta-quote-screenshot.png"
+                  src="./assets/portfolio-screenshot.png"
                   alt="Project Image"
-                />
-              </a>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
+                  />
+                </a>
+              <h1>This Portfolio</h1>
+              <div class="flex justify-center items-center pb-3">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noreferrer" title="HTML">
+                  <img class="stack-icon p-1" src="./assets/icons/html-icon.svg" alt="HTML Icon"/>
+                </a>
+                <a href="https://sass-lang.com/" target="_blank" rel="noreferrer" title="Sass">
+                  <img class="stack-icon w-5" src="./assets/icons/sass-icon.png" alt="Sass Icon"/>
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer" title="JS">
+                  <img class="stack-icon" src="./assets/icons/js-icon.svg" alt="JS Icon"/>
+                </a>
+              </div>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="notable-mentions-live-btn"
-                  href="!#"
+                  href="https://clay-k0-portfolio.netlify.app"
                   >See Live</a
                 >
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="notable-mentions-source-btn"
-                  href="https://github.com/clay-k0/"
+                  href="https://github.com/clay-k0/portfolio"
                 >
                 Source Code
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -484,17 +488,14 @@
           </li>
           <li>
             <div class="card">
+              <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
+                <!-- <img
+                  class="card-image"
+                  src="./assets/memento-screenshot.png"
+                  alt="Project Image"
+                  /> -->
+                </a>
               <h1>Project 5</h1>
-              <a href="http://clay-k0.github.io/RoboFriends-App/">
-                <img
-                  class="card-image"
-                  src="./assets/insta-quote-screenshot.png"
-                  alt="Project Image"
-                />
-              </a>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
@@ -517,17 +518,74 @@
           </li>
           <li>
             <div class="card">
-              <h1>Project 6</h1>
-              <a href="http://clay-k0.github.io/RoboFriends-App/">
-                <img
+              <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
+                <!-- <img
                   class="card-image"
-                  src="./assets/insta-quote-screenshot.png"
+                  src="./assets/memento-screenshot.png"
                   alt="Project Image"
-                />
-              </a>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
+                  /> -->
+                </a>
+              <h1>Project 6</h1>
+              <div class="card-buttons">
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="notable-mentions-live-btn"
+                  href="!#"
+                  >See Live</a
+                >
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="notable-mentions-source-btn"
+                  href="https://github.com/clay-k0/"
+                >
+                Source Code
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
+                <!-- <img
+                  class="card-image"
+                  src="./assets/memento-screenshot.png"
+                  alt="Project Image"
+                  /> -->
+                </a>
+              <h1>Project 7</h1>
+              <div class="card-buttons">
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="notable-mentions-live-btn"
+                  href="!#"
+                  >See Live</a
+                >
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="notable-mentions-source-btn"
+                  href="https://github.com/clay-k0/"
+                >
+                Source Code
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
+                <!-- <img
+                  class="card-image"
+                  src="./assets/memento-screenshot.png"
+                  alt="Project Image"
+                  /> -->
+                </a>
+              <h1>Project 8</h1>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
