--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
       </div>
     </section>
 
+    <!-- TODO: Finish bio and add image of me -->
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
@@ -92,6 +93,7 @@
             React/Next.js
           </h3>
 
+          <!-- TODO: Add Project 1 -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
@@ -151,6 +153,7 @@
             </div>
           </div>
 
+          <!-- TODO: Add Project 2 -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
@@ -214,6 +217,8 @@
           <img class="svelte-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
           Svelte/SvelteKit
         </h3>
+
+        <!-- TODO: Add Project 3 -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
@@ -272,6 +277,8 @@
             </div>
           </div>
         </div>
+
+        <!-- TODO: Add Project 4 -->
         <div class="row spacer">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
@@ -486,6 +493,7 @@
               </div>
             </div>
           </li>
+          <!-- TODO: Add Project 5 -->
           <li>
             <div class="card">
               <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
@@ -516,6 +524,7 @@
               </div>
             </div>
           </li>
+          <!-- TODO: Add Project 6 -->
           <li>
             <div class="card">
               <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
@@ -546,6 +555,7 @@
               </div>
             </div>
           </li>
+          <!-- TODO: Add Project 7 -->
           <li>
             <div class="card">
               <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
@@ -576,6 +586,7 @@
               </div>
             </div>
           </li>
+          <!-- TODO: Add Project 8 -->
           <li>
             <div class="card">
               <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
