Added new project info

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
                   <h1 class="pt-3 pb-4">Tech Stack</h1>
                   <div class="flex justify-center items-center pb-4">
                     <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                      <img class="stack-icon pb-4" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                      <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
                     </a>
                   </div>
                 </div>
@@ -163,9 +163,9 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                   <h1 class="pt-3 pb-4">Tech Stack</h1>
-                  <div class="flex justify-center items-center pb-3">
+                  <div class="flex justify-center items-center pb-4">
                     <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                      <img class="stack-icon pb-4" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                      <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
                     </a>
                   </div>
                 </div>
@@ -228,9 +228,9 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
                 <h1 class="pt-3 pb-4">Tech Stack</h1>
-                <div class="flex justify-center items-center pb-3">
-                  <a href="https://react.dev/" target="_blank" rel="noreferrer" title="Svelte">
-                    <img class="stack-icon pb-4" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
+                <div class="flex justify-center items-center pb-4">
+                  <a href="https://svelte.dev/" target="_blank" rel="noreferrer" title="Svelte">
+                    <img class="stack-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
                   </a>
                 </div>
               </div>
@@ -288,9 +288,9 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
                 <h1 class="pt-3 pb-4">Tech Stack</h1>
-                <div class="flex justify-center items-center pb-3">
-                  <a href="https://react.dev/" target="_blank" rel="noreferrer" title="Svelte">
-                    <img class="stack-icon pb-4" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
+                <div class="flex justify-center items-center pb-4">
+                  <a href="https://svelte.dev/" target="_blank" rel="noreferrer" title="Svelte">
+                    <img class="stack-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
                   </a>
                   </a>
                 </div>
@@ -493,7 +493,7 @@
               </div>
             </div>
           </li>
-          <!-- TODO: Add Project 5 -->
+          <!-- TODO: Add NextSpace image and href -->
           <li>
             <div class="card">
               <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
@@ -503,7 +503,21 @@
                   alt="Project Image"
                   /> -->
                 </a>
-              <h1>Project 5</h1>
+              <h1>NextSpace</h1>
+              <div class="flex justify-center items-center pb-3">
+                <a href="https://nextjs.org/" target="_blank" rel="noreferrer" title="Next.js">
+                  <img class="stack-icon w-5" src="./assets/icons/next-icon.svg" alt="Next.js Icon"/>
+                </a>
+                <a href="https://www.typescriptlang.org/" target="_blank" rel="noreferrer" title="TypeScript">
+                  <img class="stack-icon" src="./assets/icons/ts-icon.svg" alt="TS Icon"/>
+                </a>
+                <a href="https://authjs.dev/" target="_blank" rel="noreferrer" title="Auth.js">
+                  <img class="stack-icon" src="./assets/icons/nextauth-icon.png" alt="Auth.js Icon"/>
+                </a>
+                <a href="https://www.prisma.io/" target="_blank" rel="noreferrer" title="Prisma">
+                  <img class="stack-icon" src="./assets/icons/prisma-icon.svg" alt="Prisma Icon"/>
+                </a>
+              </div>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
