--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<html lang="en" class="sr">
+<<html lang="en" class="sr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -88,10 +88,10 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
-          <h3 class="project-group-title section-title">
+          <!-- <h3 class="project-group-title section-title">
             <img class="react-icon" src="./assets/icons/react-icon.svg" alt="React Icon" />
             React/Next.js
-          </h3>
+          </h3> -->
 
           <!-- TODO: Add Project 1 -->
           <div class="row">
@@ -213,10 +213,10 @@
             </div>
           </div>
         </div>
-        <h3 class="project-group-title section-title">
+        <!-- <h3 class="project-group-title section-title">
           <img class="svelte-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
           Svelte/SvelteKit
-        </h3>
+        </h3> -->
 
         <!-- TODO: Add Project 3 -->
         <div class="row">
@@ -227,7 +227,7 @@
                 <p class="mb-4">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <h1 class="pt-3 pb-4">Tech Stack</h1>
+                <h1 class="pb-4">Tech Stack</h1>
                 <div class="flex justify-center items-center pb-4">
                   <a href="https://svelte.dev/" target="_blank" rel="noreferrer" title="Svelte">
                     <img class="stack-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
@@ -353,7 +353,7 @@
                 alt="Project Image"
                 /></a>
                 <h1>RoboFriends</h1>
-              <div class="flex justify-center items-center pb-3 pt-3">
+                <div class="flex justify-center items-center pb-3 pt-3">
                 <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                   <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
                 </a>
@@ -685,3 +685,4 @@
     <script defer type="module" src="index.js"></script>
   </body>
 </html>
+>
