Added React icon to NextSpace

--- a/src/index.html
+++ b/src/index.html
@@ -508,6 +508,9 @@
                 <a href="https://nextjs.org/" target="_blank" rel="noreferrer" title="Next.js">
                   <img class="stack-icon w-5" src="./assets/icons/next-icon.svg" alt="Next.js Icon"/>
                 </a>
+                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
+                  <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                </a>
                 <a href="https://www.typescriptlang.org/" target="_blank" rel="noreferrer" title="TypeScript">
                   <img class="stack-icon" src="./assets/icons/ts-icon.svg" alt="TS Icon"/>
                 </a>
