--- a/src/index.html
+++ b/src/index.html
@@ -497,11 +497,11 @@
           <li>
             <div class="card">
               <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
-                <!-- <img
+                <img
                   class="card-image"
-                  src="./assets/memento-screenshot.png"
+                  src="./assets/next-space-screenshot.png"
                   alt="Project Image"
-                  /> -->
+                  />
                 </a>
               <h1>NextSpace</h1>
               <div class="flex justify-center items-center pb-3">
@@ -519,6 +519,9 @@
                 </a>
                 <a href="https://www.prisma.io/" target="_blank" rel="noreferrer" title="Prisma">
                   <img class="stack-icon" src="./assets/icons/prisma-icon.svg" alt="Prisma Icon"/>
+                </a>
+                <a href="https://www.postgresql.org/" target="_blank" rel="noreferrer" title="Postgres">
+                  <img class="stack-icon" src="./assets/icons/postgres-icon.svg" alt="Postgres Icon"/>
                 </a>
               </div>
               <div class="card-buttons">
