--- a/src/index.html
+++ b/src/index.html
@@ -493,35 +493,20 @@
               </div>
             </div>
           </li>
-          <!-- TODO: Add NextSpace image and href -->
+          <!-- TODO: Add Project 5 -->
           <li>
             <div class="card">
-              <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
+              <a href="!#" target="_blank" rel="noreferrer">
                 <img
                   class="card-image"
-                  src="./assets/next-space-screenshot.png"
+                  src="./assets/project.jpg"
                   alt="Project Image"
                   />
                 </a>
-              <h1>NextSpace</h1>
+              <h1>Project 5</h1>
               <div class="flex justify-center items-center pb-3">
-                <a href="https://nextjs.org/" target="_blank" rel="noreferrer" title="Next.js">
-                  <img class="stack-icon w-5" src="./assets/icons/next-icon.svg" alt="Next.js Icon"/>
-                </a>
                 <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                   <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
-                </a>
-                <a href="https://www.typescriptlang.org/" target="_blank" rel="noreferrer" title="TypeScript">
-                  <img class="stack-icon" src="./assets/icons/ts-icon.svg" alt="TS Icon"/>
-                </a>
-                <a href="https://authjs.dev/" target="_blank" rel="noreferrer" title="Auth.js">
-                  <img class="stack-icon" src="./assets/icons/nextauth-icon.png" alt="Auth.js Icon"/>
-                </a>
-                <a href="https://www.prisma.io/" target="_blank" rel="noreferrer" title="Prisma">
-                  <img class="stack-icon" src="./assets/icons/prisma-icon.svg" alt="Prisma Icon"/>
-                </a>
-                <a href="https://www.postgresql.org/" target="_blank" rel="noreferrer" title="Postgres">
-                  <img class="stack-icon" src="./assets/icons/postgres-icon.svg" alt="Postgres Icon"/>
                 </a>
               </div>
               <div class="card-buttons">
@@ -548,13 +533,18 @@
           <li>
             <div class="card">
               <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
-                <!-- <img
+                <img
                   class="card-image"
-                  src="./assets/memento-screenshot.png"
+                  src="./assets/project.jpg"
                   alt="Project Image"
-                  /> -->
+                  />
                 </a>
               <h1>Project 6</h1>
+              <div class="flex justify-center items-center pb-3">
+                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
+                  <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                </a>
+              </div>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
@@ -579,13 +569,18 @@
           <li>
             <div class="card">
               <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
-                <!-- <img
+                <img
                   class="card-image"
-                  src="./assets/memento-screenshot.png"
+                  src="./assets/project.jpg"
                   alt="Project Image"
-                  /> -->
+                  />
                 </a>
               <h1>Project 7</h1>
+              <div class="flex justify-center items-center pb-3">
+                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
+                  <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                </a>
+              </div>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
@@ -610,13 +605,18 @@
           <li>
             <div class="card">
               <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
-                <!-- <img
+                <img
                   class="card-image"
-                  src="./assets/memento-screenshot.png"
+                  src="./assets/project.jpg"
                   alt="Project Image"
-                  /> -->
+                  />
                 </a>
               <h1>Project 8</h1>
+              <div class="flex justify-center items-center pb-3">
+                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
+                  <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                </a>
+              </div>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
@@ -691,4 +691,3 @@
     <script defer type="module" src="index.js"></script>
   </body>
 </html>
->
