--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,7 @@
           I'm an aspiring web developer
         </h1>
         <p class="hero-cta load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Learn More</a
-          >
+          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">Learn More</a>
         </p>
       </div>
     </section>
